--- a/index.html
+++ b/index.html
@@ -127,37 +127,19 @@
             <h2>Projects<span>.</span></h2>
             <div class="projects-section">
                 <div class="project-card">
-                    <a href="#" target="_blank">
+                    <a href="https://mahmoudabubakr.github.io/Burger-Restaurant-Website/" target="_blank">
                     <div class="image-container">
                         <img src="IMG/Screenshot 2024-11-07 162441.png" alt="ProShop" loading="lazy">
                     </div>
                     <div class="project-title">Burger Restaurant</div>
-                    <!-- <div class="project-title">
-                        <div>
-                            <span>Burger Restaurant</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="preview-link">Preview</a>
-                            <a href="#" class="git-link">Github</a>
-                        </div>
-                    </div> -->
                 </a>
                 </div>
                 <div class="project-card">
-                    <a href="#" target="_blank">
+                    <a href="https://mahmoudabubakr.github.io/My-portfolio/" target="_blank">
                     <div class="image-container">
                         <img src="IMG/Screenshot 2025-01-07 232621.png" alt="Library" loading="lazy">
                     </div>
                     <div class="project-title">Portfolio</div>
-                    <!-- <div class="project-title">
-                        <div>
-                            <span>Portfolio</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="preview-link">Preview</a>
-                            <a href="#" class="git-link">Github</a>
-                        </div>
-                    </div> -->
                 </a>
                 </div>
         </section>
