--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <h2>Projects<span>.</span></h2>
             <div class="projects-section">
                 <div class="project-card">
-                    <a href="https://mahmoudabubakr.github.io/Burger-Restaurant-Website/" target="_blank">
+                    <a href="https://mahmoudabubakr.github.io/Burger/" target="_blank">
                     <div class="image-container">
                         <img src="IMG/Screenshot 2024-11-07 162441.png" alt="ProShop" loading="lazy">
                     </div>
