--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
                     <a href="mailto:mahmoudabubakr11@outlook.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
                 </div>
                 <div class="hamburger" onclick="toggleMenu()">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <div class="lines-container" onclick="rotateLines()">
+                        <div class="line line-1"></div>
+                        <div class="line line-2"></div>
+                    </div>
                 </div>
             </div>
         </nav>
