--- a/index.html
+++ b/index.html
@@ -128,22 +128,35 @@
             <h2>Projects<span>.</span></h2>
             <div class="projects-section">
                 <div class="project-card">
-                    <a href="https://mahmoudabubakr.github.io/Burger/" target="_blank">
                     <div class="image-container">
-                        <img src="IMG/Screenshot 2024-11-07 162441.png" alt="ProShop" loading="lazy">
+                        <img src="IMG/Screenshot 2024-11-07 162441.png" alt="ProShop">
                     </div>
-                    <div class="project-title">Burger Restaurant</div>
-                </a>
+                    <div class="project-title">
+                        <div>
+                            <span>Burger Restaurant</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="preview-link"><i class="fa-solid fa-link"></i></a>
+                            <a href="#" target="_blank" class="git-link"><i class="fa-brands fa-github"></i></a>
+                        </div>
+                    </div>
                 </div>
                 <div class="project-card">
-                    <a href="https://mahmoudabubakr.github.io/My-portfolio/" target="_blank">
                     <div class="image-container">
-                        <img src="IMG/Screenshot 2025-01-07 232621.png" alt="Library" loading="lazy">
+                        <img src="IMG/Screenshot 2025-01-07 232621.png" alt="Library">
                     </div>
-                    <div class="project-title">Portfolio</div>
-                </a>
+                    <div class="project-title">
+                        <div>
+                            <span>Portfolio</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="preview-link"><i class="fa-solid fa-link"></i></a>
+                            <a href="#" target="_blank" class="git-link"><i class="fa-brands fa-github"></i></a>
+                        </div>
+                    </div>
                 </div>
         </section>
+        <!-- end sec projects -->
         <!-- end sec projects -->
 
         <!-- start sec contact me -->
