--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                             <span>Burger Restaurant</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" target="_blank" class="git-link"><i class="fa-brands fa-github"></i></a>
-                            <a href="#" class="preview-link"><i class="fa-solid fa-link"></i></a>
+                            <a href="#" target="_blank"><i class="fa-brands fa-github"></i></a>
+                            <a href="#" target="_blank"><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -150,8 +150,8 @@
                             <span>Portfolio</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" target="_blank" class="git-link"><i class="fa-brands fa-github"></i></a>
-                            <a href="#" class="preview-link"><i class="fa-solid fa-link"></i></a>
+                            <a href="#" target="_blank" ><i class="fa-brands fa-github"></i></a>
+                            <a href="#" target="_blank" ><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                 </div>
