--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         </div>
                         <div class="project-links">
                             <a href="#" target="_blank"><i class="fa-brands fa-github"></i></a>
-                            <a href="#" target="_blank"><i class="fa-solid fa-link"></i></a>
+                            <a href="https://mahmoudabubakr.github.io/Burger/" target="_blank"><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                 </div>
