--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <span>Burger Restaurant</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" target="_blank"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://github.com/mahmoudabubakr/Burger" target="_blank"><i class="fa-brands fa-github"></i></a>
                             <a href="https://mahmoudabubakr.github.io/Burger/" target="_blank"><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
