--- a/index.html
+++ b/index.html
@@ -193,20 +193,20 @@
     </section>
     <!-- end sec contact me -->
 
-    <!--  -->
+    <!-- back to home sec -->
     <div class="up">
       <a href="#home"><i class="fa-solid fa-circle-chevron-up"></i></a>
     </div>
+    
+  </main>
+  <!-- end main -->
 
-
-    <!-- start footer -->
+      <!-- start footer -->
     <footer>
       <p>Developed by Mahmoud Abu-bakr @ 2025</p>
     </footer>
     <!-- end footer -->
-  </main>
-  <!-- end main -->
-
+  
   <!-- canves -->
   <canvas id="spiderweb"></canvas>
   <script src="script.js"></script>
