--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <span>Portfolio</span>
             </div>
             <div class="project-links">
-              <a href="#" target="_blank"><i class="fa-brands fa-github"></i></a>
+              <a href="https://github.com/mahmoudabubakr/My-portfolio" target="_blank"><i class="fa-brands fa-github"></i></a>
               <a href="#" target="_blank"><i class="fa-solid fa-link"></i></a>
             </div>
           </div>
