--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </ul>
       <div class="side-nav">
         <div class="social_nav">
-          <a href="https://github.com/MahmoudAliAbubakr" target="_blank"><i class="fa-brands fa-github"></i></a>
+          <a href="https://github.com/mahmoudabubakr?tab=repositories" target="_blank"><i class="fa-brands fa-github"></i></a>
           <a href="https://api.whatsapp.com/send/?phone=201000350520&text&type=phone_number&app_absent=0"
             target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
           <a href="https://www.linkedin.com/in/mahmoud-ali-abubakr/" target="_blank"><i
@@ -180,7 +180,7 @@
             <button type="submit">Let's talk</button>
             <!--  -->
             <div class="social-icons">
-              <a href="https://github.com/MahmoudAliAbubakr" target="_blank"><i class="fa-brands fa-github"></i>
+              <a href="https://github.com/mahmoudabubakr?tab=repositories" target="_blank"><i class="fa-brands fa-github"></i>
                 <a href="https://api.whatsapp.com/send/?phone=201000350520&text&type=phone_number&app_absent=0"
                   target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="https://www.linkedin.com/in/mahmoud-ali-abubakr/" target="_blank"><i
