--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
   <!-- start nav par -->
-  <div id="home">
-    <nav class="navigation">
+  <nav id="home" >
+    <div class="navigation">
       <div class="Logo-name">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 50 50"
           id="Micron-Icon--Streamline-Svg-Logos" height="50" width="50">
@@ -48,8 +48,8 @@
           </div>
         </div>
       </div>
+     </div>
     </nav>
-  </div>
   <!-- end nav par -->
 
   <!-- start header -->
