--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <!-- start header -->
   <header>
     <div>
-      <h1>Hi, i'm <span>Mahmoud Ali Abu-bakr</span> <br> I'm a <span id="animated-text">Frontend Development.</span></h1>
+      <h1>Hi, i'm <span>Mahmoud Ali Abu-bakr</span> <br> I'm a <span id="animated-text"></span></h1>
       <p>Welcome to my portfolio, I did this website to see all my projects, I wish this portfolio like you.
       </p>
       <a href="https://drive.google.com/file/d/1-VpkL87hKnCZ0r4sffcKsxVjpTEu9ybd/view?usp=drive_link" class="cv-button"
