--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <!-- start sec projects -->
     <section id="projects">
-      <h2>Projects<span>.</span></h2>
+      <h2>Projects<span class="title">.</span></h2>
       <div class="projects-section">
         <div class="project-card">
           <div class="image-container">
