--- a/index.html
+++ b/index.html
@@ -58,22 +58,9 @@
       <h1>Hi, i'm <span>Mahmoud Ali Abu-bakr</span> <br> I'm a <span id="animated-text"></span></h1>
       <p>Welcome to my portfolio, I did this website to see all my projects, I wish this portfolio like you.
       </p>
-<!--       <a href="https://drive.google.com/file/d/1-VpkL87hKnCZ0r4sffcKsxVjpTEu9ybd/view?usp=drive_link" class="cv-button"
-        target="_blank">Download Resume</a> -->
-            <a href="https://drive.google.com/file/d/1-VpkL87hKnCZ0r4sffcKsxVjpTEu9ybd/view?usp=drive_link" target="_blank" class="Btn">
-        <div class="mmm">
-          <svg class="svgIcon" viewBox="0 0 384 512" height="1em" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z">
-            </path>
-          </svg>
-          <span class="icon2"></span>
-        </div>
-        <span >Download CV</span>
-      </a>
+      <a href="https://drive.google.com/file/d/1-VpkL87hKnCZ0r4sffcKsxVjpTEu9ybd/view?usp=drive_link" class="cv-button"
+        target="_blank">Download Resume</a>
     </div>
-    <figure>
-    </figure>
   </header>
   <!-- end header -->
 
@@ -188,20 +175,7 @@
           </div>
           <div class="form">
             <!--  -->
-<!--             <button type="submit">Let's talk</button> -->
-                        <button>
-              <div class="svg-wrapper-1">
-                <div class="svg-wrapper">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1.5rem" height="1.5rem">
-                    <path fill="none" d="M0 0h24v24H0z"></path>
-                    <path fill="currentColor"
-                      d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z">
-                    </path>
-                  </svg>
-                </div>
-              </div>
-              <span>Send</span>
-            </button>
+            <button type="submit">Let's talk</button>
             <!--  -->
             <div class="social-icons">
               <a href="https://github.com/mahmoudabubakr?tab=repositories" target="_blank"><i class="fa-brands fa-github"></i>
