--- a/index.html
+++ b/index.html
@@ -58,8 +58,19 @@
       <h1>Hi, i'm <span>Mahmoud Ali Abu-bakr</span> <br> I'm a <span id="animated-text"></span></h1>
       <p>Welcome to my portfolio, I did this website to see all my projects, I wish this portfolio like you.
       </p>
-      <a href="https://drive.google.com/file/d/1-VpkL87hKnCZ0r4sffcKsxVjpTEu9ybd/view?usp=drive_link" class="cv-button"
-        target="_blank">Download Resume</a>
+<!--       <a href="https://drive.google.com/file/d/1-VpkL87hKnCZ0r4sffcKsxVjpTEu9ybd/view?usp=drive_link" class="cv-button"
+        target="_blank">Download Resume</a> -->
+            <a href="https://drive.google.com/file/d/1-VpkL87hKnCZ0r4sffcKsxVjpTEu9ybd/view?usp=drive_link" target="_blank" class="Btn">
+        <div class="mmm">
+          <svg class="svgIcon" viewBox="0 0 384 512" height="1em" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z">
+            </path>
+          </svg>
+          <span class="icon2"></span>
+        </div>
+        <span >Download CV</span>
+      </a>
     </div>
   </header>
   <!-- end header -->
