--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
           <a href="mailto:mahmoudabubakr11@outlook.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
         </div>
         <div class="hamburger" onclick="toggleMenu()">
-          <div class="lines-container" onclick="rotateLines()">
+<!--           <div class="lines-container" onclick="rotateLines()">
             <div class="line line-1"></div>
             <div class="line line-2"></div>
           </div>
-        </div>
+        </div> -->
+           <input type="checkbox" id="checkbox">
+ <label for="checkbox" class="toggle">
+     <div class="bars" id="bar1"></div>
+     <div class="bars" id="bar2"></div>
+     <div class="bars" id="bar3"></div>
+ </label>
       </div>
      </div>
     </nav>
