--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         <span><i class="fa-brands fa-bootstrap fa-fade" style="color: #9875ff;"></i></span>
         <span><i class="fa-brands fa-react fa-fade" style="color: #74C0FC;"></i></span>
         <span><i class="ri-tailwind-css-fill fa-fade" style="color: #0081c2;"></i></span>
+        <span><i class="fa-brands fa-figma fa-fade" style="color: #fffcfc;"></i></span>
       </div>
       <div class="skill">
         <h3>Version Control -</h3>
