--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         <h3>Version Control -</h3>
         <span><i class="fa-brands fa-git-alt fa-fade" style="color: #c25700;"></i></span>
         <span><i class="fa-brands fa-github fa-fade" style="color: #fffcfc;"></i></span>
+        <span><i class="fa-brands fa-linux fa-fade" style="color: #fffcfc;"></i></i></span>
       </div>
     </section>
     <!-- end sec skills -->
