--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </p>
 <!--       <a href="https://drive.google.com/file/d/1-VpkL87hKnCZ0r4sffcKsxVjpTEu9ybd/view?usp=drive_link" class="cv-button"
         target="_blank">Download Resume</a> -->
-            <a href="https://drive.google.com/file/d/16ce2pKwlcyCk6IJ4YMa0Lu8mmpsAI5Qu/view?usp=sharing" target="_blank" class="Btn">
+            <a href="https://drive.google.com/file/d/1-X4OX6GMMn8ifzo3jtcGeCX50fmF_JP9/view?usp=drive_link" target="_blank" class="Btn">
                       <span >Download CV</span>
         <div class="mmm">
           <svg class="svgIcon" viewBox="0 0 384 512" height="1em" xmlns="http://www.w3.org/2000/svg">
