--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <!-- end sec skills -->
         <!-- start services -->
     <section id="Services">
-      <h2>My Services</h2>
+      <h2>My Services<span>.</span></h2>
       <div class="cards">
         <div class="card">
           <div class="service-img">
@@ -147,7 +147,7 @@
           </div>
           <h3>UI&UX Desing</h3>
           <p>ning intuitive and engaging interfaces for an enhanced user experience.</p>
-          <span><i class="fa-solid fa-arrow-up fa-2xl"></i></span>
+          <i class="fa-solid fa-arrow-up fa-2xl"></i>
         </div>
         <div class="card">
           <div class="service-img">
@@ -160,7 +160,7 @@
           </div>
           <h3>Frontend By React</h3>
           <p>Utilizing frameworks like React.js for scalable web applications.</p>
-          <span><i class="fa-solid fa-arrow-up fa-2xl"></i></span>
+          <i class="fa-solid fa-arrow-up fa-2xl"></i>
         </div>
         <div class="card">
           <div class="service-img">
@@ -173,7 +173,7 @@
           </div>
           <h3>Responsive Develop</h3>
           <p>Creating visually appealing and optimized websites for All devices</p>
-          <span><i class="fa-solid fa-arrow-up fa-2xl"></i></span>
+          <i class="fa-solid fa-arrow-up fa-2xl"></i>
         </div>
       </div>
     </section>
