--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <!-- end sec skills -->
         <!-- start services -->
     <section id="Services">
-      <h2>My Services<span>.</span></h2>
+      <h2>Services<span>.</span></h2>
       <div class="cards">
         <div class="card">
           <div class="service-img">
