--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <ul class="nav-links">
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#skills">SKILLS</a></li>
+        <li><a href="#Services">Services</a></li>
         <li><a href="#projects">PROJECTS</a></li>
         <li><a href="#contact">CONTACT ME</a></li>
       </ul>
