--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <!-- start header -->
   <header>
     <div>
-      <h1>Hi, i'm <span>Mahmoud Ali Abu-bakr</span> <br> I'm a <span id="animated-text"></span></h1>
-      <p>Welcome to my portfolio, I did this website to see all my projects, I wish this portfolio like you.
+      <h1>Hi, I'm <span>Mahmoud Ali Abu-bakr</span> <br> I'm a <span id="animated-text"></span></h1>
+      <p>Welcome to my portfolio, I did this website to show all my projects, I wish this portfolio like you.
       </p>
 <!--       <a href="https://drive.google.com/file/d/1-VpkL87hKnCZ0r4sffcKsxVjpTEu9ybd/view?usp=drive_link" class="cv-button"
         target="_blank">Download Resume</a> -->
@@ -220,8 +220,7 @@
       <div class="contact-me">
         <h2>Let's <span>Contact.</span></h2>
         <p>I am actively looking for new opportunities, my inbox is always open. Whether you have a question or
-          just
-          want to say hi, I’ll try my best to get back to you!</p>
+          just want to say hi, I’ll definitely get back to you!</p>
         <form action="https://formsubmit.co/mahmoudabubakr11@outlook.com" method="post" class="contact-form">
           <div class="form">
             <input type="text" name="name" placeholder="Name" required />
