--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
-  <title>Welcome to my portfolio</title>
+  <title>Mahmoud Abubakr portfolio</title>
 </head>
 
 <body>
@@ -57,7 +57,7 @@
   <header>
     <div>
       <h1>Hi, I'm <span>Mahmoud Ali Abu-bakr</span> <br> I'm a <span id="animated-text"></span></h1>
-      <p>Welcome to my portfolio, I did this website to show all my projects, I wish this portfolio like you.
+      <p>Welcome to my portfolio, I did this website to show all my projects, I wish you like you this portfolio.
       </p>
 <!--       <a href="https://drive.google.com/file/d/1-VpkL87hKnCZ0r4sffcKsxVjpTEu9ybd/view?usp=drive_link" class="cv-button"
         target="_blank">Download Resume</a> -->
