--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
         <div class="project-card">
           <div class="image-container">
-            <img src="IMG/Screenshot 2025-01-07 232621.png" alt="Library">
+            <img src="IMG/Screenshot from 2025-02-14 21-14-15.png" alt="Library">
           </div>
           <div class="project-title">
             <div>
