--- a/index.html
+++ b/index.html
@@ -277,8 +277,11 @@
     </footer>
     <!-- end footer -->
   
-  <!-- canves -->
+  <!-- start canves background -->
   <canvas id="spiderweb"></canvas>
+  <!-- end canves background -->
+
+  <!--  JS  -->
   <script src="script.js"></script>
 </body>
 
