--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <header>
     <div>
       <h1>Hi, I'm <span>Mahmoud Ali Abu-bakr</span> <br> I'm a <span id="animated-text"></span></h1>
-      <p>Welcome to my portfolio, I did this website to show all my projects, I wish you like you this portfolio.
+      <p>Welcome to my portfolio, I did this website to show all my services and projects, I wish you like my portfolio.
       </p>
 <!--       <a href="https://drive.google.com/file/d/1-VpkL87hKnCZ0r4sffcKsxVjpTEu9ybd/view?usp=drive_link" class="cv-button"
         target="_blank">Download Resume</a> -->
