--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           </div>
           <h3>UI&UX Desing</h3>
           <p>ning intuitive and engaging interfaces for an enhanced user experience.</p>
-          <i class="fa-solid fa-arrow-up fa-2xl"></i>
+<!--           <i class="fa-solid fa-arrow-up fa-2xl"></i> -->
         </div>
         <div class="card">
           <div class="service-img">
@@ -161,7 +161,7 @@
           </div>
           <h3>Frontend By React</h3>
           <p>Utilizing frameworks like React.js for scalable web applications.</p>
-          <i class="fa-solid fa-arrow-up fa-2xl"></i>
+<!--           <i class="fa-solid fa-arrow-up fa-2xl"></i> -->
         </div>
         <div class="card">
           <div class="service-img">
@@ -174,7 +174,7 @@
           </div>
           <h3>Responsive Develop</h3>
           <p>Creating visually appealing and optimized websites for All devices</p>
-          <i class="fa-solid fa-arrow-up fa-2xl"></i>
+<!--           <i class="fa-solid fa-arrow-up fa-2xl"></i> -->
         </div>
       </div>
     </section>
