--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
           <a href="www.linkedin.com/in/mahmoudaliabubakr" target="_blank"><i
               class="fa-brands fa-linkedin"></i></a>
-          <a href="mailto:mahmoudabubakr11@outlook.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+          <a href="mailto:mahmoudaliabubakr@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
         </div>
         <div class="hamburger" onclick="toggleMenu()">
           <div class="lines-container" onclick="rotateLines()">
@@ -255,7 +255,7 @@
                   target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="www.linkedin.com/in/mahmoudaliabubakr" target="_blank"><i
                     class="fa-brands fa-linkedin"></i></a>
-                <a href="mailto:mahmoudabubakr11@outlook.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+                <a href="mailto:mahmoudaliabubakr@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
             </div>
           </div>
         </form>
