--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a href="https://github.com/mahmoudabubakr?tab=repositories" target="_blank"><i class="fa-brands fa-github"></i></a>
           <a href="https://api.whatsapp.com/send/?phone=201000350520&text&type=phone_number&app_absent=0"
             target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-          <a href="www.linkedin.com/in/mahmoudaliabubakr" target="_blank"><i
+          <a href="http://linkedin.com/in/mahmoudaliabubakr" target="_blank"><i
               class="fa-brands fa-linkedin"></i></a>
           <a href="mailto:mahmoudaliabubakr@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
         </div>
@@ -253,7 +253,7 @@
               <a href="https://github.com/mahmoudabubakr?tab=repositories" target="_blank"><i class="fa-brands fa-github"></i>
                 <a href="https://api.whatsapp.com/send/?phone=201000350520&text&type=phone_number&app_absent=0"
                   target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                <a href="www.linkedin.com/in/mahmoudaliabubakr" target="_blank"><i
+                <a href="http://linkedin.com/in/mahmoudaliabubakr" target="_blank"><i
                     class="fa-brands fa-linkedin"></i></a>
                 <a href="mailto:mahmoudaliabubakr@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
             </div>
