--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -255,7 +255,7 @@
                   target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="http://linkedin.com/in/mahmoudaliabubakr" target="_blank"><i
                     class="fa-brands fa-linkedin"></i></a>
-                <a href="mailto:mahmoudaliabubakr@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+                <a href="mailto:mahmoudabo1611@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
             </div>
           </div>
         </form>
