--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             to
             technology-driven projects while continuing to learn and grow.</p>
           <figure>
-            <img src="IMG/IMG_5663.JPG" alt="hand catch phone" loading="lazy">
+            <img src="IMG/IMG_2685.JPG.jpeg" alt="hand catch phone" loading="lazy">
           </figure>
         </div>
       </div>
@@ -293,3 +293,4 @@
 </body>
 
 </html>
+
