--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
   <title>Mahmoud Abubakr portfolio</title>
+  
 </head>
 
 <body>
@@ -227,7 +228,7 @@
         <h2>Let's <span>Contact.</span></h2>
         <p>I am actively looking for new opportunities, my inbox is always open. Whether you have a question or
           just want to say hi, I’ll definitely get back to you!</p>
-        <form action="https://formsubmit.co/mahmoudabubakr11@outlook.com" method="post" class="contact-form">
+        <form action="https://forminit.com/thank-you" method="post" class="contact-form">
           <div class="form">
             <input type="text" name="name" placeholder="Name" required />
             <input type="email" name="email" placeholder="Email" required />
@@ -293,5 +294,6 @@
 </body>
 
 </html>
+
 
 
