--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
         <h2>Let's <span>Contact.</span></h2>
         <p>I am actively looking for new opportunities, my inbox is always open. Whether you have a question or
           just want to say hi, I’ll definitely get back to you!</p>
-        <form action="https://forminit.com/thank-you" method="post" class="contact-form">
+        <form class="contact-form" onsubmit="sendMail(event)">
           <div class="form">
             <input type="text" id="name" name="name" placeholder="Name" required />
             <input type="email" id="email" name="email" placeholder="Email" required />
           </div>
           <div class="form">
-            <input type="text" id="subject" name="subject" placeholder="Subject" required />
+            <input type="text" id="subject" name="subject" placeholder="Subject" />
           </div>
           <div class="form">
             <textarea name="message" id="message" rows="5" placeholder="Message" required></textarea>
@@ -250,7 +250,7 @@
           <div class="form">
             <!--  -->
             <!--             <button type="submit">Let's talk</button> -->
-            <button onclick="sendMail()">
+            <button type="submit" >
               <div class="svg-wrapper-1">
                 <div class="svg-wrapper">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1.5rem" height="1.3rem">
@@ -302,6 +302,7 @@
 </body>
 
 </html>
+
 
 
 
