--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <h2>Let's <span>Contact.</span></h2>
         <p>I am actively looking for new opportunities, my inbox is always open. Whether you have a question or
           just want to say hi, I’ll definitely get back to you!</p>
-        <form class="contact-form" onsubmit="sendMail(event)">
+        <form id="contact-form" class="contact-form" onsubmit="sendMail(event)">
           <div class="form">
             <input type="text" id="name" name="name" placeholder="Name" required />
             <input type="email" id="email" name="email" placeholder="Email" required />
@@ -302,6 +302,7 @@
 </body>
 
 </html>
+
 
 
 
