--- a/index.html
+++ b/index.html
@@ -275,6 +275,8 @@
             </div>
           </div>
         </form>
+        <!-- Alert Box -->
+              <div id="form-alert" class="form-alert"></div></div>
       </div>
     </section>
     <!-- end sec contact me -->
@@ -302,6 +304,7 @@
 </body>
 
 </html>
+
 
 
 
