--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
     <!-- end sec contact me -->
 
     <!-- back to home sec -->
-    <div class="up">
+    <!-- <div class="up">
       <a href="#home"><i class="fa-solid fa-circle-chevron-up"></i></a>
-    </div>
+    </div> -->
 
   </main>
   <!-- end main -->
@@ -301,6 +301,7 @@
 </body>
 
 </html>
+
 
 
 
