--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           </div>
           <div class="form">
             <!--  -->
-            <button type="button" onclick="sendMail(event) >
+            <button type="button" onclick="sendMail(event)">
               <div class="svg-wrapper-1">
                 <div class="svg-wrapper">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1.5rem" height="1.3rem">
@@ -279,9 +279,9 @@
     <!-- end sec contact me -->
 
     <!-- back to home sec -->
-    <div class="up">
+    <!-- <div class="up">
       <a href="#home"><i class="fa-solid fa-circle-chevron-up"></i></a>
-    </div>
+    </div> -->
 
   </main>
   <!-- end main -->
@@ -301,6 +301,7 @@
 </body>
 
 </html>
+
 
 
 
