--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           </div>
           <div class="form">
             <!--  -->
-            <button type="button" onclick="sendMail(event)">
+            <button type="button" onclick="sendMail(event)" id="send-btn>
               <div class="svg-wrapper-1">
                 <div class="svg-wrapper">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1.5rem" height="1.3rem">
@@ -260,7 +260,7 @@
                   </svg>
                 </div>
               </div>
-              <span>Send</span>
+              <span class="btn-text">Send</span>
             </button>
             <!--  -->
             <div class="social-icons">
@@ -301,6 +301,7 @@
 </body>
 
 </html>
+
 
 
 
