--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                   target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="http://linkedin.com/in/mahmoudaliabubakr" target="_blank"><i
                     class="fa-brands fa-linkedin"></i></a>
-                <a href="mailto:mahmoudabo1611@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+                <a href="mailto:mahmoudaliabubakr@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
             </div>
           </div>
         </form>
@@ -301,6 +301,7 @@
 </body>
 
 </html>
+
 
 
 
