--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
       <h2>Skills<span>.</span></h2>
       <div class="skill">
         <h3>Frontend Developer -</h3>
-        <span><i class="fa-brands fa-html5 fa-fade" style="color: #af3a12;"></i></span>
-        <span><i class="fa-brands fa-css3-alt fa-fade" style="color: #0f4095;"></i></span>
-        <span><i class="fa-brands fa-square-js fa-fade" style="color: #FFD43B;"></i></span>
-        <span><i class="fa-brands fa-node-js fa-fade" style="color: #03ad00;"></i></span>
+        <span><i class="fa-brands fa-html5" style="color: #af3a12;"></i></span>
+        <span><i class="fa-brands fa-css3-alt" style="color: #0f4095;"></i></span>
+        <span><i class="fa-brands fa-square-js" style="color: #FFD43B;"></i></span>
+        <span><i class="fa-brands fa-node-js" style="color: #03ad00;"></i></span>
         <!-- <span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 35 35"
             id="Typescript-Icon--Streamline-Svg-Logos" height="35" width="35">
             <desc>Typescript Icon Streamline Icon: https://streamlinehq.com</desc>
@@ -132,16 +132,16 @@
       </div>
       <div class="skill">
         <h3>Libraries -</h3>
-        <span><i class="fa-brands fa-bootstrap fa-fade" style="color: #9875ff;"></i></span>
-        <span><i class="fa-brands fa-react fa-fade" style="color: #74C0FC;"></i></span>
-        <span><i class="ri-tailwind-css-fill fa-fade" style="color: #0081c2;"></i></span>
-        <span><i class="fa-brands fa-figma fa-fade" style="color: #fffcfc;"></i></span>
+        <span><i class="fa-brands fa-bootstrap" style="color: #9875ff;"></i></span>
+        <span><i class="fa-brands fa-react" style="color: #74C0FC;"></i></span>
+        <span><i class="ri-tailwind-css-fill" style="color: #0081c2;"></i></span>
+        <span><i class="fa-brands fa-figma" style="color: #fffcfc;"></i></span>
       </div>
       <div class="skill">
         <h3>Version Control -</h3>
-        <span><i class="fa-brands fa-git-alt fa-fade" style="color: #c25700;"></i></span>
-        <span><i class="fa-brands fa-github fa-fade" style="color: #fffcfc;"></i></span>
-        <span><i class="fa-brands fa-linux fa-fade" style="color: #fffcfc;"></i></i></span>
+        <span><i class="fa-brands fa-git-alt" style="color: #c25700;"></i></span>
+        <span><i class="fa-brands fa-github" style="color: #fffcfc;"></i></span>
+        <span><i class="fa-brands fa-linux" style="color: #fffcfc;"></i></i></span>
       </div>
     </section>
     <!-- end sec skills -->
@@ -301,6 +301,7 @@
 </body>
 
 </html>
+
 
 
 
